<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Margaret</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <!--UI Strings -->
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="action_new_comp">New Complaint</string>
    <string name="create_job">CREATE</string>
    <string name="cancel">CANCEL</string>
    <string name="fyp"><u>Forgot Password</u>.</string>
    <string name="title_activity_complaint_verification">Complaint Verification</string>
    
    <!--Global Strings -->
    <string name="no_internet">No network connection enabled.</string>
    
    <!--Custom font Strings -->
    <string name="Helvetica">fonts/HelveticaNeueLTStd-Lt_0.ttf</string>
    
    <!--Menu Strings -->
    <string name="new_complaint">New Complaint</string>
    <string name="verified_only">Verified Only</string>
    <string name="new_only">New Only</string>
    <string name="paid_complaints">Paid Complaints</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    
    <string name="verify">Verify</string>
    <string name="clamp">Clamp</string>
    <string name="tow">Tow</string>
    <string name="payment">Payment</string>

    <string name="title_activity_clamp">Clamp</string>
    <string name="title_activity_tow">Tow</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_complaint_registration">Complaint Registration</string>
    <string name="towing_before">BEFORE TOWING</string>
    <string name="towing_after">AFTER TOWING</string>
    <string name="clamping_before">BEFORE CLAMPING</string>
    <string name="clamping_after">AFTER CLAMPING</string>
    <string name="customer_name_prompt">Select customer name</string>
    <string name="customer_name_error">No names are available</string>

    <!-- COMPLAINT VERIFICATION SCREEN-->
    <string name="reference">REFERENCE</string>
    <string name="building">BUILDING</string>
    <string name="cluster">CLUSTER</string>
    <string name="level">LEVEL</string>
    <string name="zone">ZONE</string>
    <string name="bay_number">BAY NUMBER</string>
    <string name="wrongly_parked_vehicle">WRONGLY PARKED VEHICLE DETAILS</string>
    <string name="make">MAKE</string>
    <string name="color">COLOR</string>
    <string name="model">MODEL</string>
    <string name="plate_details">PLATE DETAILS</string>
    <string name="complainer_details">COMPLAINER DETAILS</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="contact_number">CONTACT NUMBER</string>
    <string name="complaint_closed_on">Complaint Closed On: </string>

    <!--       BUTTONS  -->
    <string name="submit">SUBMIT</string>
    <string name="close_job">CLOSE JOB</string>
    

    <string-array name="month_names">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Complaints</item>
        <item >Clamp</item>
        <item >Tow</item>
        <item >Payment</item>
        <item >Closed</item>
    </string-array>
    
      <string-array name="nav_drawer_customer_items">
        <item >Complaints</item>
        <item >Closed</item>
       <!--  <item >What\'s Hot</item> -->
    </string-array>
    <array name="nav_drawer_customer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
      <!--   <item>@drawable/ic_whats_hot</item> -->
    </array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- Content Description -->    
    <string name="title_activity_forgot_password">Forgot Password</string>
    
    <!-- Error messages --> 
    <string name="no_towed_complaints">You don\'t have Towed Complaints</string>
    <string name="no_clamped_complaints">You don\'t have Clamp Complaints</string>
    <string name="no_paid_complaints">You don\'t have Paid Complaints</string>
    <string name="no_verified_complaints">You don\'t have Verified Complaints</string>
    <string name="no_new_complaints">You don\'t have New Complaints</string>
    <string name="no_closed_complaints">You don\'t have Closed Complaints</string>

</resources>
