<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:margaret="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity" >

    <item
        android:id="@+id/action_new_complaint"
        android:icon="@drawable/ic_action_new"
        android:title="@string/new_complaint"
        margaret:showAsAction="always"/>
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_action_popup_more"
        android:orderInCategory="100"
        android:title=""
        margaret:showAsAction="always">
        <menu>
            <item
                android:id="@+id/verifiedOnly"
                android:title="@string/verified_only"
                margaret:showAsAction="never"/>
            <item
                android:id="@+id/newComplaintsOnly"
                android:title="@string/new_only"
                margaret:showAsAction="never"/>
            <item
                android:id="@+id/paidComplaintsOnly"
                android:title="@string/paid_complaints"
                margaret:showAsAction="never"/>
            <item
                android:id="@+id/action_search"
                android:icon="@drawable/ic_action_search"
                android:title="@string/search"
                android:visible="false"
                margaret:showAsAction="never"/>
        </menu>
    </item>

</menu>