<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fc_text_light_green" >

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="23dp"
        android:paddingRight="23dp" >

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corners"
            android:ems="10"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/fc_text_light_green"
            android:textColorHint="@color/fc_text_light_green" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/userName"
            android:layout_below="@+id/userName"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_rounded_corners"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/fc_text_light_green"
            android:textColorHint="@color/fc_text_light_green" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/password"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/fc_rect_border_sign_in"
            android:onClick="signIn"
            android:text="SignIn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="forgotPassword"
        android:text="@string/fyp"
        android:textColor="#0091EA" />

</RelativeLayout>